fix: add map struct-based mapper